--- a/app/templates/eventFrameTemplates/select.html
+++ b/app/templates/eventFrameTemplates/select.html
@@ -14,23 +14,23 @@ Event Frame Templates
             {% set tableHeader = "Enterprise" %}
             {% set pageHeaderSubText = "Select an Enterprise" %}
         {% elif childrenClass == "Site" %}
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Site" %}
             {% set pageHeaderSubText = "Select a Site" %}
         <!-- "and parent" checks for systems that have not been configured with a site yet. -->
         {% elif childrenClass == "ElementTemplate" and parent %}
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = parent.Enterprise.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = parent.Enterprise.__class__.__name__,
                 selectedId = parent.Enterprise.id()) }}">{{ parent.Enterprise.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Element Template" %}
             {% set pageHeaderSubText = "Select an Element Template" %}
         {% elif childrenClass == "EventFrameTemplate" %}
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = parent.Site.Enterprise.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = parent.Site.Enterprise.__class__.__name__,
                 selectedId = parent.Site.Enterprise.id()) }}">{{ parent.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = parent.Site.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = parent.Site.__class__.__name__,
                 selectedId = parent.Site.id()) }}">{{ parent.Site.Name }}</a></li>
             <li class = "active">{{ parent.Name }}</li>
             {% set tableHeader = "Event Frame Template" %}
@@ -38,15 +38,15 @@ Event Frame Templates
         {% elif childrenClass == "DescendantEventFrameTemplate" %}
             <!-- These are children event frame templates. -->
             {% set origin = parent.origin() %}
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = "Root") }}">..</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = origin.ElementTemplate.Site.Enterprise.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = "Root") }}">..</a></li>
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = origin.ElementTemplate.Site.Enterprise.__class__.__name__,
                 selectedId = origin.ElementTemplate.Site.Enterprise.id()) }}">{{ origin.ElementTemplate.Site.Enterprise.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = origin.ElementTemplate.Site.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = origin.ElementTemplate.Site.__class__.__name__,
                 selectedId = origin.ElementTemplate.Site.id()) }}">{{ origin.ElementTemplate.Site.Name }}</a></li>
-            <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = origin.ElementTemplate.__class__.__name__,
+            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = origin.ElementTemplate.__class__.__name__,
                 selectedId = origin.ElementTemplate.id()) }}">{{ origin.ElementTemplate.Name }}</a></li>
             {% for ancestor in parent.ancestors([]) %}
-                <li><a href = "{{ url_for("eventFrameTemplates.select", selectedClass = ancestor.__class__.__name__,
+                <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate", selectedClass = ancestor.__class__.__name__,
                     selectedId = ancestor.id()) }}">{{ ancestor.Name }}</a></li>
             {% endfor %}
             <li class = "active">{{ parent.Name }}</li>
@@ -82,7 +82,7 @@ Event Frame Templates
             {% if children %}
                 {% for child in children %}
                     <tr>
-                        <td><a class = "btn btn-default" title = "Children" href = "{{ url_for("eventFrameTemplates.select",
+                        <td><a class = "btn btn-default" title = "Children" href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate",
                             selectedClass = child.__class__.__name__, selectedId = child.id()) }}"><span class="glyphicon glyphicon-list"></span></a></td>
                         <td>{{ child.Name }}</td>
                         <td>{{ child.Description }}</td>
