--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,7 +40,7 @@
                         <ul class = "dropdown-menu">
                             <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Elements</a></li>
                             <li><a href = "{{ url_for("elementAttributeTemplates.listElementAttributeTemplates") }}">Element Attributes</a></li>
-                            <li><a href = "{{ url_for("eventFrameTemplates.select") }}">Event Frames</a></li>
+                            <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate") }}">Event Frames</a></li>
                         </ul>
                     </li>
                     <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class="caret"></span></a>
@@ -65,8 +65,8 @@
                 {% endif %}
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Data Entry <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("elements.select") }}">Elements</a></li>
-                        <li><a href = "{{ url_for("eventFrames.select") }}">Event Frames</a></li>
+                        <li><a href = "{{ url_for("elements.selectElement") }}">Elements</a></li>
+                        <li><a href = "{{ url_for("eventFrames.selectEventFrame") }}">Event Frames</a></li>
                         <li><a href = "{{ url_for("tags.selectTag") }}">Tags</a></li>
                     </ul>
                 </li>
