--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -9,12 +9,12 @@
 {% block page_content %}
 <div>
     <ol class="breadcrumb">
-        <li><a href = "{{ url_for("elements.select", selectedClass = "Root", selectedId = None) }}">..</a></li>
-        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.Site.Enterprise.__class__.__name__,
+        <li><a href = "{{ url_for("elements.selectElement", selectedClass = "Root", selectedId = None) }}">..</a></li>
+        <li><a href = "{{ url_for("elements.selectElement", selectedClass = element.ElementTemplate.Site.Enterprise.__class__.__name__,
             selectedId = element.ElementTemplate.Site.Enterprise.EnterpriseId) }}">{{ element.ElementTemplate.Site.Enterprise.Name }}</a></li>
-        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.Site.__class__.__name__,
+        <li><a href = "{{ url_for("elements.selectElement", selectedClass = element.ElementTemplate.Site.__class__.__name__,
             selectedId = element.ElementTemplate.Site.SiteId) }}">{{ element.ElementTemplate.Site.Name }}</a></li>
-        <li><a href = "{{ url_for("elements.select", selectedClass = element.ElementTemplate.__class__.__name__,
+        <li><a href = "{{ url_for("elements.selectElement", selectedClass = element.ElementTemplate.__class__.__name__,
             selectedId = element.ElementTemplate.ElementTemplateId) }}">{{ element.ElementTemplate.Name }}</a></li>
         <li class = "active">{{ element.Name }}</li>
     </ol>
