Combined element templates and attributes UI.

--- a/app/templates/elements/select.html
+++ b/app/templates/elements/select.html
@@ -46,7 +46,7 @@ Data Entry - Elements
         <thead>
             <tr>
                 <th></th>
-                <th>Name</th>
+                <th>{{ tableHeader }}</th>
                 <th>Description</th>
             </tr>
         </thead>
