--- a/app/templates/elementTemplates/select.html
+++ b/app/templates/elementTemplates/select.html
@@ -38,7 +38,7 @@ Event Frame Templates
         {% endif %}
     </ol>
 </div>
-<div>
+<div class = "page-header">
     <h1>Element Templates <small>{{ pageHeaderSubText }}</small></h1>
 </div>
 <div>
