--- a/app/templates/eventFrameTemplates/select.html
+++ b/app/templates/eventFrameTemplates/select.html
@@ -55,7 +55,7 @@ Event Frame Templates
         {% endif %}
     </ol>
 </div>
-<div>
+<div class = "page-header">
     <h1>Event Frame Templates <small>{{ pageHeaderSubText }}</small></h1>
 </div>
 <div>
