--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -62,7 +62,7 @@ Data Entry - Event Frames
         {% endif %}
     </ol>
 </div>
-<div>
+<div class = "page-header">
     <h1>Event Frames <small>{{ pageHeaderSubText }}</small></h1>
 </div>
 <div>
