--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -5,5 +5,7 @@ Brewery Pi - Forbidden
 {% endblock %}
 
 {% block page_content %}
-<h1>Forbidden</h1>
+<div class = "page-header">
+    <h1>403 <small>Forbidden</small></h1>
+</div>
 {% endblock %}
