--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -5,5 +5,7 @@ Brewery Pi - Not Found
 {% endblock %}
 
 {% block page_content %}
-<h1>Not Found</h1>
+<div class = "page-header">
+    <h1>404 <small>Not Found</small></h1>
+</div>
 {% endblock %}
