--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -5,5 +5,7 @@ Brewery Pi - Internal Server Error
 {% endblock %}
 
 {% block page_content %}
-<h1>Internal Server Error</h1>
+<div class = "page-header">
+    <h1>500 <small>Internal Server Error</small></h1>
+</div>
 {% endblock %}
