--- a/app/templates/areas/areas.html
+++ b/app/templates/areas/areas.html
@@ -5,8 +5,10 @@ Areas
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>Areas <small></small></h1>
+</div>
 <div>
-    <h1>Areas</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("areas.addArea") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "areasTable" class = "table">
