--- a/app/templates/authentications/login.html
+++ b/app/templates/authentications/login.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block page_content %}
-<div>
-    <h1>Log In</h1>
+<div class = "page-header">
+    <h1>Log In <small></small></h1>
 </div>
 <div class = "col-md-3">
     {{ wtf.quick_form(form) }}
