--- a/app/templates/elements/dashboard.html
+++ b/app/templates/elements/dashboard.html
@@ -18,10 +18,11 @@
             selectedId = element.ElementTemplate.ElementTemplateId) }}">{{ element.ElementTemplate.Name }}</a></li>
         <li class = "active">{{ element.Name }}</li>
     </ol>
-    <div class = "page-header">
-        <h1>{{ element.Name }} <small>Event Frames</small></h1>
-    </div>
-    <br>
+</div>
+<div class = "page-header">
+    <h1>{{ element.Name }} <small>Event Frames</small></h1>
+</div>
+<div>
     <table id = "eventFramesTable" class = "table">
         <thead>
             <tr>
@@ -82,10 +83,11 @@
             {% endfor %}
         </tbody>
     </table>
-    <div class = "page-header">
-        <h1>{{ element.Name }} <small>Attributes</small></h1>
-    </div>
-    <br>
+</div>
+<div>
+    <h1>{{ element.Name }} <small>Attributes</small></h1>
+</div>
+<div>
     <table id = "attributesTable" class = "table">
         <thead>
             <tr>
