--- a/app/templates/elements/elements.html
+++ b/app/templates/elements/elements.html
@@ -5,8 +5,10 @@ Elements
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>Elements <small></small></h1>
+</div>
 <div>
-    <h1>Elements</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("elements.addElement") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "elementsTable" class = "table">
