--- a/app/templates/enterprises/enterprises.html
+++ b/app/templates/enterprises/enterprises.html
@@ -7,8 +7,10 @@ Enterprises
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>Enterprises <small></small></h1>
+</div>
 <div>
-    <h1>Enterprises</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("enterprises.addEnterprise") }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
