--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -48,14 +48,19 @@ Event Frames
             <li class = "active">{{ eventFrameTemplate.Name }}</li>
         {% endif %}
     </ol>
-    <h1>{{ element.Name }}</h1>
-    {% if parentEventFrame %}
-        {% set url = url_for("eventFrames.addEventFrame", parentEventFrameId = parentEventFrame.EventFrameId) %}
-        <h2>{{ parentEventFrame.EventFrameTemplate.Name }} {{ parentEventFrame.friendlyName() }} Child Event Frames</h2>
-    {% else %}
-        {% set url = url_for("eventFrames.addEventFrame", elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) %}
-        <h2>Event Frames</h2>
-    {% endif %}
+</div>
+<div class = "page-header">
+    <h1>{{ element.Name }}
+        {% if parentEventFrame %}
+            {% set url = url_for("eventFrames.addEventFrame", parentEventFrameId = parentEventFrame.EventFrameId) %}
+            <small>{{ parentEventFrame.EventFrameTemplate.Name }} {{ parentEventFrame.friendlyName() }} Child Event Frames</small>
+        {% else %}
+            {% set url = url_for("eventFrames.addEventFrame", elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) %}
+            <small>Event Frames</small>
+        {% endif %}
+    </h1>
+</div>
+<div>    
     <a class = "btn btn-default" title = "Add" href = "{{ url }}" role = "button"><span class="glyphicon glyphicon-plus"></a>
     <br><br>
     <table id = "eventFramesTable" class = "table">
