--- a/app/templates/lookupValues/lookupValues.html
+++ b/app/templates/lookupValues/lookupValues.html
@@ -5,8 +5,10 @@ Lookup Values
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>{{ lookup.Name }} <small>Lookup Values</small></h1>
+</div>
 <div>
-    <h1>{{ lookup.Name }} - Lookup Values</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookupValues.addLookupValue", lookupId = lookup.LookupId) }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
