--- a/app/templates/lookups/lookups.html
+++ b/app/templates/lookups/lookups.html
@@ -5,8 +5,10 @@ Lookups
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>Lookups <small></small></h1>
+</div>
 <div>
-    <h1>Lookups</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("lookups.addLookup") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "lookupsTable" class = "table">
