--- a/app/templates/sites/sites.html
+++ b/app/templates/sites/sites.html
@@ -5,8 +5,10 @@ Sites
 {% endblock %}
 
 {% block page_content %}
+<div class = "page-header">
+    <h1>Sites <small></small></h1>
+</div>
 <div>
-    <h1>Sites</h1>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("sites.addSite") }}" role = "button"><span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
     <table id = "sitesTable" class = "table">
