--- a/app/templates/tagValues/tagValueNotes.html
+++ b/app/templates/tagValues/tagValueNotes.html
@@ -35,7 +35,11 @@ Tag Value Notes
             <li class = "active">{{ tagValue.Timestamp }}</li>
         {% endif %}
     </ol>
-    <h1>Tag Value Notes</h1>
+</div>
+<div class = "page-header">
+    <h1>Tag Value Notes <small></small></h1>
+</div>
+<div>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("tagValues.addTagValueNote", tagValueId = tagValue.TagValueId) }}" role = "button">
         <span class="glyphicon glyphicon-plus"></span></a>
     <br><br>
