--- a/app/templates/unitOfMeasurements/unitOfMeasurements.html
+++ b/app/templates/unitOfMeasurements/unitOfMeasurements.html
@@ -6,7 +6,7 @@ Units of Measurment
 
 {% block page_content %}
 <div class = "page-header">
-    <h1>Units of Measurement</h1>
+    <h1>Units of Measurement <small></small></h1>
 </div>
 <div>
     <a class = "btn btn-default" title = "Add" href = "{{ url_for("unitOfMeasurements.addUnitOfMeasurement") }}" role = "button">
