--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -76,7 +76,7 @@
             {% endif %}
             <ul class = "nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
-                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Account <span class="caret"></span></a>
+                <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">{{ current_user.Name }} <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
                         <li><a href = "{{ url_for("authentications.logout") }}">Logout</a></li>
                         <li><a href = "{{ url_for("users.changePassword", userId = current_user.UserId) }}">Change Password</a></li>
