Some more clean up. Sort Event frames select by timestamp desc then name.

--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -114,11 +114,12 @@ Data Entry - Event Frames
         ({
             "order":
             [
-                [1, 'desc']              // Start timestamp.
+                [2, "desc"],    // Start timestamp.
+                [1, "asc"]      // Name.
             ],
             "columns":
             [
-            null,
+                null,
                 null,
                 null,
                 null
